fixed css class name overlapping with dropdown-list

--- a/react-app/src/components/DropDown/DropDown.css
+++ b/react-app/src/components/DropDown/DropDown.css
@@ -8,7 +8,7 @@
     position: relative
 }
 
-.dropdown-list {
+.dropdown-list2 {
     position: absolute;
     top: 100%; /* Position the dropdown below the button */
     right: 0; /* Align the dropdown with the button */
